# jsi-example

./: .gitignore  .npmrc  App.tsx  README.md  app.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
__tests__/: App.test.tsx
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  MathOperations.cpp  MathOperations.h
android/app/src/main/java/com/jsiexample/: MainActivity.kt  MainApplication.kt  ReactPackages.kt
android/app/src/main/java/com/jsiexample/bridges/: JSIExampleInstaller.kt
android/app/src/main/java/com/jsiexample/cpp-app/: MathOperations.cpp  MathOperations.h
android/app/src/main/java/com/jsiexample/mathops/: MathOperationsKotlin.kt  MathOperationsKotlinInstaller.java
android/app/src/main/res/values/: strings.xml
ios/: JSIExample-Bridging-Header.h  Podfile
ios/JSIExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/JSIExample.xcodeproj/: project.pbxproj
ios/JSIExample.xcodeproj/xcshareddata/xcschemes/: JSIExample.xcscheme
ios/JSIExample.xcworkspace/: contents.xcworkspacedata
ios/JSIExampleTests/: JSIExampleTests.m
ios/MathOps/: JSIExampleInstaller.h  JSIExampleInstaller.mm  MathOperationsHostObject.h  MathOperationsHostObject.mm  MathOperationsSwift.swift
src/mathops/: MathOperationsProxy.ts  MathOperationsUnavailableError.ts
src/utils/: MathOpsError.ts
